--- a/index.html
+++ b/index.html
@@ -80,6 +80,11 @@
   </div>
 </section>
 
+<!-- End section four  -->
+
+
+
+
 
 <section class="section-five">
      <div class="first-item">
@@ -100,6 +105,7 @@
     </div>
    </div>
 </section>
+<!-- End section five  -->
 
 
 <section class="section-six">
